--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <li>✅ Free Computer Speed Up</li>
           <li>✅ Free Build Labor</li>
           <li>✅ You only pay for parts if needed</li>
-          <li>free virus removal</li>
-          <li>|free pc repair</li>
+          <li>✅free virus removal</li>
+          <li>✅free pc repair</li>
         </ul>
       </div>
     </div>
@@ -180,7 +180,8 @@
 <script>
 /* ========== CONFIG ========== */
 // Your Google Apps Script Web App URL (deployed /exec)
-const SHEET_API = "https://script.google.com/macros/s/AKfycbznM1xHCnHDyi9CFZ_IykS3DyF2NSZDBga6YBNBVH3v0KK4ueBx6m--ZHh9lPipzrmk/exec";
+const SHEET_API = "https://script.google.com/macros/s/AKfycbwBkcpyYlE1abqZNrB4lsw-9vnfL_N0gbe_211t1JYa24UEmOik-4wyCAy1XZ274tXI/exec";
+
 
 // Admin key (client-side, as requested)
 const ADMIN_KEY = "42069";
@@ -433,3 +434,4 @@ function scrollToBooking(){
 </script>
 </body>
 </html>
+
