--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li>✅ You only pay for parts if needed</li>
           <li>✅free virus removal</li>
           <li>✅free pc repair</li>
-          <li>✅free moms
+          <li>✅free boobs
         </ul>
       </div>
     </div>
@@ -434,6 +434,7 @@ function scrollToBooking(){
 </script>
 </body>
 </html>
+
 
 
 
