--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li>✅ You only pay for parts if needed</li>
           <li>✅free virus removal</li>
           <li>✅free pc repair</li>
-          <li>✅free tits
+          <li>✅free boobs
         </ul>
       </div>
     </div>
@@ -181,7 +181,7 @@
 <script>
 /* ========== CONFIG ========== */
 // Your Google Apps Script Web App URL (deployed /exec)
-const SHEET_API =  "https://script.google.com/macros/s/AKfycbxqcOcFn8hAeV6ISOKKWrSocOI9WaRTieRHdjGtY-4rp9bOmsM-XyUaWcmln5hNCEm2/exec";
+const SHEET_API =  "https://script.google.com/macros/s/AKfycbx3nKRjPRZbSucIyW-ONcZMOQMWGI5VRE3muhdO9dj1QJL1t8QNsXEcwkHRhgqXGKv00g/exec";
                  
 // Admin key (client-side, as requested)
 const ADMIN_KEY = "42069";
@@ -434,6 +434,7 @@ function scrollToBooking(){
 </script>
 </body>
 </html>
+
 
 
 
