--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li>✅ You only pay for parts if needed</li>
           <li>✅free virus removal</li>
           <li>✅free pc repair</li>
-          <li>✅free boobs
+          <li>✅free tits
         </ul>
       </div>
     </div>
@@ -181,7 +181,7 @@
 <script>
 /* ========== CONFIG ========== */
 // Your Google Apps Script Web App URL (deployed /exec)
-const SHEET_API =  "https://script.google.com/macros/s/AKfycbx3nKRjPRZbSucIyW-ONcZMOQMWGI5VRE3muhdO9dj1QJL1t8QNsXEcwkHRhgqXGKv00g/exec";
+const SHEET_API =  const SHEET_API = "https://script.google.com/macros/s/AKfycbyMVezpER1wsFH3HB31m1vAkJdN7U8ljCXMUtMhAO9e0Jt9Duf8nMMkIO-outfkoUkMGQ/exec";
                  
 // Admin key (client-side, as requested)
 const ADMIN_KEY = "42069";
@@ -434,6 +434,7 @@ function scrollToBooking(){
 </script>
 </body>
 </html>
+
 
 
 
