--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   .btn-orange { background: var(--orange); color: white; }
   .btn-orange:hover { background: var(--orange-hover); }
   .card { background: var(--card); }
-  /* small helper for colored dots */
   .dot { display:inline-block; width:10px; height:10px; border-radius:999px; margin-right:8px; vertical-align:middle; }
 </style>
 </head>
@@ -39,10 +38,7 @@
 
     <div class="flex items-center space-x-3">
       <button id="bookBtn" class="px-4 py-2 rounded-lg btn-orange font-semibold shadow" onclick="scrollToBooking()">Book Appointment</button>
-
-      <!-- Admin toggle (will prompt for key) -->
       <button id="adminBtn" class="px-4 py-2 rounded-lg btn-orange font-semibold shadow" onclick="promptAdminKey()">View Appointments</button>
-
       <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=blackicerocks82@gmail.com&item_name=Support%20TheHardwareHotline.com"
          target="_blank"
          class="px-4 py-2 rounded-lg bg-gray-800 border border-orange-700 text-orange-300 font-semibold hover:bg-gray-700 transition">Donate</a>
@@ -67,9 +63,8 @@
           <li>✅ Free Computer Speed Up</li>
           <li>✅ Free Build Labor</li>
           <li>✅ You only pay for parts if needed</li>
-          <li>✅free virus removal</li>
-          <li>✅free pc repair</li>
-          <li>✅free tits
+          <li>✅ Free Virus Removal</li>
+          <li>✅ Free PC Repair</li>
         </ul>
       </div>
     </div>
@@ -127,19 +122,16 @@
     </form>
   </section>
 
-  <!-- APPOINTMENTS COMPACT BOX (always accessible and visible for clients) -->
+  <!-- APPOINTMENTS COMPACT BOX -->
   <section class="mt-6">
     <div class="card p-4 rounded-xl shadow-inner">
       <div class="flex items-center justify-between mb-3">
         <h3 class="text-lg font-bold text-orange-300">Upcoming Appointments (quick view)</h3>
         <div class="text-sm text-gray-400">Clients can view other bookings here</div>
       </div>
-
       <div id="compactAppointments" class="max-h-48 overflow-y-auto divide-y divide-gray-700 p-1">
-        <!-- Compact appointment items injected here -->
         <p class="text-gray-400">Loading appointments…</p>
       </div>
-
       <div class="mt-3 text-sm text-gray-400">
         <span class="dot" style="background:var(--success)"></span> Available &nbsp;&nbsp;
         <span class="dot" style="background:var(--danger)"></span> Booked
@@ -147,7 +139,7 @@
     </div>
   </section>
 
-  <!-- ADMIN / EXPANDED APPOINTMENTS (hidden by default; needs key) -->
+  <!-- ADMIN / EXPANDED APPOINTMENTS -->
   <section id="expandedAppointments" class="card p-4 rounded-xl shadow-xl mt-6 hidden">
     <div class="flex justify-between items-start">
       <h3 class="text-xl font-bold text-orange-300">All Appointments (Detailed)</h3>
@@ -155,10 +147,7 @@
         <button class="px-3 py-2 rounded border border-gray-700 text-gray-200" onclick="closeExpanded()">Close</button>
       </div>
     </div>
-
-    <div id="appointmentsBox" class="mt-4 max-h-96 overflow-y-auto divide-y divide-gray-700 p-2">
-      <!-- Full appointments list injected here -->
-    </div>
+    <div id="appointmentsBox" class="mt-4 max-h-96 overflow-y-auto divide-y divide-gray-700 p-2"></div>
   </section>
 
 </main>
@@ -177,30 +166,18 @@
   &copy; <span id="year"></span> TheHardwareHotline.com — Data saved to your Google Sheet.
 </footer>
 
-<!-- SCRIPT: Booking + Google Sheets integration -->
+<!-- SCRIPT -->
 <script>
-/* ========== CONFIG ========== */
-// Your Google Apps Script Web App URL (deployed /exec)
-const SHEET_API =  const SHEET_API = "https://script.google.com/macros/s/AKfycbyMVezpER1wsFH3HB31m1vAkJdN7U8ljCXMUtMhAO9e0Jt9Duf8nMMkIO-outfkoUkMGQ/exec";
-                 
-// Admin key (client-side, as requested)
+const SHEET_API = "https://script.google.com/macros/s/AKfycbwBkcpyYlE1abqZNrB4lsw-9vnfL_N0gbe_211t1JYa24UEmOik-4wyCAy1XZ274tXI/exec";
 const ADMIN_KEY = "42069";
 
-/* ========== SLOTS ========== */
 const DAILY_SLOTS = [
-  "09:00 AM - 10:00 AM",
-  "10:00 AM - 11:00 AM",
-  "11:00 AM - 12:00 PM",
-  "12:00 PM - 01:00 PM",
-  "01:00 PM - 02:00 PM",
-  "02:00 PM - 03:00 PM",
-  "03:00 PM - 04:00 PM",
-  "04:00 PM - 05:00 PM"
+  "09:00 AM - 10:00 AM","10:00 AM - 11:00 AM","11:00 AM - 12:00 PM","12:00 PM - 01:00 PM",
+  "01:00 PM - 02:00 PM","02:00 PM - 03:00 PM","03:00 PM - 04:00 PM","04:00 PM - 05:00 PM"
 ];
 
-let appointments = []; // loaded from sheet
+let appointments = [];
 
-/* ========== ELEMENTS ========== */
 const dateInput = document.getElementById('date');
 const timeSelect = document.getElementById('time');
 const bookingForm = document.getElementById('bookingForm');
@@ -211,33 +188,31 @@ const expandedAppointments = document.getElementById('expandedAppointments');
 const thankModal = document.getElementById('thankModal');
 const yearSpan = document.getElementById('year');
 
-/* ========== UTIL ========== */
+/* ================= DATE PICKER ================= */
 function setMinDateTomorrow() {
   const t = new Date();
-  t.setDate(t.getDate() + 1);
+  t.setDate(t.getDate()+1);
   const yyyy = t.getFullYear();
   const mm = String(t.getMonth()+1).padStart(2,'0');
   const dd = String(t.getDate()).padStart(2,'0');
   dateInput.min = `${yyyy}-${mm}-${dd}`;
+  dateInput.value = `${yyyy}-${mm}-${dd}`;
 }
 setMinDateTomorrow();
 yearSpan.textContent = new Date().getFullYear();
 
-/* Format date pretty if possible */
+/* ========== UTILITIES ========== */
 function prettyDate(d){
-  // expect d in yyyy-mm-dd or other parseable string
   const dt = new Date(d);
   if(isNaN(dt)) return d;
   return dt.toLocaleDateString();
 }
 
-/* Fetch appointments from Google Apps Script (GET) */
 async function fetchAppointments(){
   try {
     const res = await fetch(SHEET_API);
     const json = await res.json();
-    // sanitize / normalize
-    appointments = (Array.isArray(json) ? json : []).map(r => ({
+    appointments = (Array.isArray(json)? json : []).map(r => ({
       name: String(r.name || r.Name || "").trim(),
       date: String(r.date || r.Date || "").trim(),
       time: String(r.time || r.Time || "").trim(),
@@ -246,67 +221,48 @@ async function fetchAppointments(){
     renderCompactAppointments();
     renderExpandedAppointments();
     updateTimeSlots();
-  } catch (err) {
-    console.error("Failed to fetch appointments:", err);
-    compactAppointments.innerHTML = '<p class="text-red-500">Could not load appointments.</p>';
+  } catch(e){
+    console.error("Failed to fetch appointments:", e);
+    compactAppointments.innerHTML='<p class="text-red-500">Could not load appointments.</p>';
   }
 }
 
-/* Render compact view (short list clients will see) */
 function renderCompactAppointments(){
-  if(!appointments || appointments.length === 0){
-    compactAppointments.innerHTML = '<p class="text-gray-400">No appointments yet — be the first!</p>';
-    return;
-  }
-  // group by date ascending
-  const sorted = appointments.slice().sort((a,b)=>{
-    if(a.date === b.date) return a.time.localeCompare(b.time);
-    return a.date.localeCompare(b.date);
-  });
-  compactAppointments.innerHTML = '';
-  sorted.forEach(a=>{
-    const el = document.createElement('div');
-    el.className = 'py-2';
-    el.innerHTML = `
-      <div class="flex justify-between items-start">
-        <div>
-          <div class="text-sm font-semibold text-orange-300">${a.name || 'Client'}</div>
-          <div class="text-xs text-gray-300">${prettyDate(a.date)} • ${a.time}</div>
-          <div class="text-gray-300 mt-1 text-sm">${a.description || ''}</div>
+  if(!appointments.length){ compactAppointments.innerHTML='<p class="text-gray-400">No appointments yet — be the first!</p>'; return; }
+  compactAppointments.innerHTML='';
+  appointments.slice().sort((a,b)=>a.date.localeCompare(b.date) || a.time.localeCompare(b.time))
+    .forEach(a=>{
+      const el = document.createElement('div');
+      el.className='py-2';
+      el.innerHTML=`
+        <div class="flex justify-between items-start">
+          <div>
+            <div class="text-sm font-semibold text-orange-300">${a.name||'Client'}</div>
+            <div class="text-xs text-gray-300">${prettyDate(a.date)} • ${a.time}</div>
+            <div class="text-gray-300 mt-1 text-sm">${a.description||''}</div>
+          </div>
         </div>
-      </div>
-    `;
-    compactAppointments.appendChild(el);
-  });
+      `;
+      compactAppointments.appendChild(el);
+    });
 }
 
-/* Render expanded (detailed) admin box */
 function renderExpandedAppointments(){
   if(!appointmentsBox) return;
-  appointmentsBox.innerHTML = '';
-  if(!appointments || appointments.length === 0){
-    appointmentsBox.innerHTML = '<p class="text-gray-400">No appointments yet.</p>';
-    return;
-  }
-  // group by date
-  const grouped = appointments.reduce((acc, ap) => {
-    (acc[ap.date] = acc[ap.date] || []).push(ap);
-    return acc;
-  }, {});
-  const dates = Object.keys(grouped).sort();
-  dates.forEach(date => {
-    const header = document.createElement('div');
-    header.className = 'py-3';
-    header.innerHTML = `<div class="text-sm font-bold text-orange-300 mb-2">${prettyDate(date)}</div>`;
+  appointmentsBox.innerHTML='';
+  if(!appointments.length){ appointmentsBox.innerHTML='<p class="text-gray-400">No appointments yet.</p>'; return; }
+  const grouped = appointments.reduce((acc,a)=>(acc[a.date]=acc[a.date]||[]).push(a), {});
+  Object.keys(grouped).sort().forEach(date=>{
+    const header=document.createElement('div'); header.className='py-3';
+    header.innerHTML=`<div class="text-sm font-bold text-orange-300 mb-2">${prettyDate(date)}</div>`;
     appointmentsBox.appendChild(header);
-    grouped[date].forEach(ap => {
-      const card = document.createElement('div');
-      card.className = 'p-3 rounded mb-2 bg-black/20';
-      card.innerHTML = `<div class="flex justify-between">
+    grouped[date].forEach(ap=>{
+      const card=document.createElement('div'); card.className='p-3 rounded mb-2 bg-black/20';
+      card.innerHTML=`<div class="flex justify-between">
           <div>
-            <div class="text-sm font-semibold text-white">${ap.name || 'Client'}</div>
+            <div class="text-sm font-semibold text-white">${ap.name||'Client'}</div>
             <div class="text-xs text-gray-300">${ap.time}</div>
-            <div class="text-gray-300 mt-2">${ap.description || ''}</div>
+            <div class="text-gray-300 mt-2">${ap.description||''}</div>
           </div>
           <div class="text-xs text-gray-400">${prettyDate(date)}</div>
         </div>`;
@@ -315,128 +271,86 @@ function renderExpandedAppointments(){
   });
 }
 
-/* Update available slots in the <select> */
 function updateTimeSlots(){
   const selectedDate = dateInput.value;
-  timeSelect.innerHTML = '<option value="">Select a time</option>';
+  timeSelect.innerHTML='<option value="">Select a time</option>';
   if(!selectedDate) return;
-  // find booked slots for selectedDate
-  const booked = appointments.filter(a => a.date === selectedDate).map(a => a.time);
-  DAILY_SLOTS.forEach(slot => {
-    const opt = document.createElement('option');
-    opt.value = slot;
-    if(booked.includes(slot)){
-      opt.textContent = `${slot} (BOOKED)`;
-      opt.disabled = true;
-      // visually mark - not all browsers style option backgrounds, so we also include legend
-    } else {
-      opt.textContent = `${slot} (Available)`;
-    }
+  const booked=appointments.filter(a=>a.date===selectedDate).map(a=>a.time);
+  DAILY_SLOTS.forEach(slot=>{
+    const opt=document.createElement('option');
+    opt.value=slot;
+    if(booked.includes(slot)){ opt.textContent=`${slot} (BOOKED)`; opt.disabled=true; } 
+    else{ opt.textContent=`${slot} (Available)`; }
     timeSelect.appendChild(opt);
   });
 }
 
-/* Submit handler */
-bookingForm.addEventListener('submit', async (ev) => {
+/* ================= SUBMIT ================= */
+bookingForm.addEventListener('submit', async ev=>{
   ev.preventDefault();
-  formFeedback.textContent = "";
+  formFeedback.textContent="";
   const name = document.getElementById('name').value.trim();
-  const date = document.getElementById('date').value;
-  const time = document.getElementById('time').value;
+  const date = dateInput.value;
+  const time = timeSelect.value;
   const description = document.getElementById('description').value.trim();
 
   if(!name || !date || !time || !description){
-    formFeedback.textContent = "Please fill out all fields.";
-    formFeedback.style.color = "tomato";
-    return;
+    formFeedback.textContent="Please fill out all fields.";
+    formFeedback.style.color="tomato"; return;
   }
 
-  // check double-book
-  if(appointments.some(a => a.date === date && a.time === time)){
-    formFeedback.textContent = "Sorry — that slot was just booked. Please choose another.";
-    formFeedback.style.color = "tomato";
-    updateTimeSlots();
-    return;
+  if(appointments.some(a=>a.date===date && a.time===time)){
+    formFeedback.textContent="Sorry — that slot was just booked. Please choose another.";
+    formFeedback.style.color="tomato"; updateTimeSlots(); return;
   }
 
-  // POST to Google Apps Script
-  try {
-    const res = await fetch(SHEET_API, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ name, date, time, description })
+  try{
+    const res=await fetch(SHEET_API,{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({name,date,time,description})
     });
-    const json = await res.json();
-    if(json && json.status === "success"){
-      // success UI
-      formFeedback.textContent = "Appointment booked! Thank you.";
-      formFeedback.style.color = "lightgreen";
+    const json=await res.json();
+    if(json && json.status==="success"){
+      formFeedback.textContent="Appointment booked! Thank you.";
+      formFeedback.style.color="lightgreen";
       bookingForm.reset();
-      setTimeout(() => openThankModal(), 300);
-      // refresh appointments from sheet
+      setTimeout(()=>openThankModal(),300);
       await fetchAppointments();
     } else {
-      formFeedback.textContent = "There was an error saving your appointment. Please try again.";
-      formFeedback.style.color = "tomato";
-      console.error("POST result:", json);
+      formFeedback.textContent="There was an error saving your appointment. Please try again.";
+      formFeedback.style.color="tomato";
+      console.error("POST result:",json);
     }
-  } catch (err) {
-    console.error("POST failed", err);
-    formFeedback.textContent = "Network error — could not book appointment.";
-    formFeedback.style.color = "tomato";
+  } catch(err){
+    console.error("POST failed",err);
+    formFeedback.textContent="Network error — could not book appointment.";
+    formFeedback.style.color="tomato";
   }
 });
 
-/* ADMIN prompt: request key, reveal expanded appointments if correct */
+/* ================= ADMIN / MODALS ================= */
 function promptAdminKey(){
-  // simple prompt for key
-  const key = prompt("Enter admin key to view detailed appointments (ask owner).");
-  if(key === ADMIN_KEY){
+  const key=prompt("Enter admin key to view detailed appointments (ask owner).");
+  if(key===ADMIN_KEY){
     expandedAppointments.classList.remove('hidden');
-    // scroll to expanded
     expandedAppointments.scrollIntoView({behavior:'smooth', block:'start'});
-  } else if(key === null) {
-    // cancel
-  } else {
-    alert("Invalid key.");
-  }
+  } else if(key!==null){ alert("Invalid key."); }
 }
+function closeExpanded(){ expandedAppointments.classList.add('hidden'); }
+function toggleAppointmentsBox(){ compactAppointments.parentElement.scrollIntoView({behavior:'smooth'}); }
+function openThankModal(){ thankModal.classList.remove('hidden'); }
+function closeThankModal(){ thankModal.classList.add('hidden'); }
+function scrollToBooking(){ document.getElementById('bookingCard').scrollIntoView({behavior:'smooth'}); }
 
-function closeExpanded(){
-  expandedAppointments.classList.add('hidden');
-}
-
-/* Toggle compact appointments box visibility */
-function toggleAppointmentsBox(){
-  // scroll to compact box
-  compactAppointments.parentElement.scrollIntoView({behavior:'smooth'});
-}
-
-/* Thank you modal */
-function openThankModal(){
-  thankModal.classList.remove('hidden');
-}
-function closeThankModal(){
-  thankModal.classList.add('hidden');
-}
-
-/* Scroll helper */
-function scrollToBooking(){
-  document.getElementById('bookingCard').scrollIntoView({behavior:'smooth'});
-}
-
-/* Initialize: fetch appointments and wire up date change */
+/* ================= INIT ================= */
 (async function init(){
   dateInput.addEventListener('change', updateTimeSlots);
-  // set initial min date already done earlier
   await fetchAppointments();
 })();
 </script>
 </body>
 </html>
-
-
-
 
 
 
