--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 
     <div class="flex items-center space-x-3">
       <button id="bookBtn" class="px-4 py-2 rounded-lg btn-orange font-semibold shadow" onclick="scrollToBooking()">Book Appointment</button>
+
+      <!-- Admin toggle -->
       <button id="adminBtn" class="px-4 py-2 rounded-lg btn-orange font-semibold shadow" onclick="promptAdminKey()">View Appointments</button>
+
       <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=blackicerocks82@gmail.com&item_name=Support%20TheHardwareHotline.com"
          target="_blank"
          class="px-4 py-2 rounded-lg bg-gray-800 border border-orange-700 text-orange-300 font-semibold hover:bg-gray-700 transition">Donate</a>
@@ -129,9 +132,11 @@
         <h3 class="text-lg font-bold text-orange-300">Upcoming Appointments (quick view)</h3>
         <div class="text-sm text-gray-400">Clients can view other bookings here</div>
       </div>
+
       <div id="compactAppointments" class="max-h-48 overflow-y-auto divide-y divide-gray-700 p-1">
         <p class="text-gray-400">Loading appointments…</p>
       </div>
+
       <div class="mt-3 text-sm text-gray-400">
         <span class="dot" style="background:var(--success)"></span> Available &nbsp;&nbsp;
         <span class="dot" style="background:var(--danger)"></span> Booked
@@ -147,6 +152,7 @@
         <button class="px-3 py-2 rounded border border-gray-700 text-gray-200" onclick="closeExpanded()">Close</button>
       </div>
     </div>
+
     <div id="appointmentsBox" class="mt-4 max-h-96 overflow-y-auto divide-y divide-gray-700 p-2"></div>
   </section>
 
@@ -168,7 +174,7 @@
 
 <!-- SCRIPT -->
 <script>
-const SHEET_API = "https://script.google.com/macros/s/AKfycbwBkcpyYlE1abqZNrB4lsw-9vnfL_N0gbe_211t1JYa24UEmOik-4wyCAy1XZ274tXI/exec";
+const SHEET_API = "https://script.google.com/macros/s/AKfycbyPnwSl_DWUTAoszz24rq0HV5rnyFNfOMZGLf3R_HPUcBbNXCDO9EOR7F32QZpIrvwGJg/exec";
 const ADMIN_KEY = "42069";
 
 const DAILY_SLOTS = [
@@ -188,84 +194,60 @@ const expandedAppointments = document.getElementById('expandedAppointments');
 const thankModal = document.getElementById('thankModal');
 const yearSpan = document.getElementById('year');
 
-/* ================= DATE PICKER ================= */
-function setMinDateTomorrow() {
-  const t = new Date();
-  t.setDate(t.getDate()+1);
-  const yyyy = t.getFullYear();
-  const mm = String(t.getMonth()+1).padStart(2,'0');
-  const dd = String(t.getDate()).padStart(2,'0');
+function setMinDateTomorrow(){
+  const t = new Date(); t.setDate(t.getDate()+1);
+  const yyyy = t.getFullYear(); const mm = String(t.getMonth()+1).padStart(2,'0'); const dd = String(t.getDate()).padStart(2,'0');
   dateInput.min = `${yyyy}-${mm}-${dd}`;
-  dateInput.value = `${yyyy}-${mm}-${dd}`;
 }
 setMinDateTomorrow();
 yearSpan.textContent = new Date().getFullYear();
 
-/* ========== UTILITIES ========== */
-function prettyDate(d){
-  const dt = new Date(d);
-  if(isNaN(dt)) return d;
-  return dt.toLocaleDateString();
-}
+function prettyDate(d){ const dt = new Date(d); if(isNaN(dt)) return d; return dt.toLocaleDateString(); }
 
 async function fetchAppointments(){
-  try {
+  try{
     const res = await fetch(SHEET_API);
     const json = await res.json();
-    appointments = (Array.isArray(json)? json : []).map(r => ({
-      name: String(r.name || r.Name || "").trim(),
-      date: String(r.date || r.Date || "").trim(),
-      time: String(r.time || r.Time || "").trim(),
-      description: String(r.description || r.Description || "").trim()
+    appointments = (Array.isArray(json) ? json : []).map(r => ({
+      name: String(r.name || "").trim(),
+      date: String(r.date || "").trim(),
+      time: String(r.time || "").trim(),
+      description: String(r.description || "").trim()
     }));
-    renderCompactAppointments();
-    renderExpandedAppointments();
-    updateTimeSlots();
-  } catch(e){
-    console.error("Failed to fetch appointments:", e);
-    compactAppointments.innerHTML='<p class="text-red-500">Could not load appointments.</p>';
-  }
+    renderCompactAppointments(); renderExpandedAppointments(); updateTimeSlots();
+  }catch(err){ console.error(err); compactAppointments.innerHTML = '<p class="text-red-500">Could not load appointments.</p>'; }
 }
 
 function renderCompactAppointments(){
   if(!appointments.length){ compactAppointments.innerHTML='<p class="text-gray-400">No appointments yet — be the first!</p>'; return; }
+  const sorted = appointments.slice().sort((a,b)=> a.date===b.date ? a.time.localeCompare(b.time) : a.date.localeCompare(b.date));
   compactAppointments.innerHTML='';
-  appointments.slice().sort((a,b)=>a.date.localeCompare(b.date) || a.time.localeCompare(b.time))
-    .forEach(a=>{
-      const el = document.createElement('div');
-      el.className='py-2';
-      el.innerHTML=`
-        <div class="flex justify-between items-start">
-          <div>
-            <div class="text-sm font-semibold text-orange-300">${a.name||'Client'}</div>
-            <div class="text-xs text-gray-300">${prettyDate(a.date)} • ${a.time}</div>
-            <div class="text-gray-300 mt-1 text-sm">${a.description||''}</div>
-          </div>
-        </div>
-      `;
-      compactAppointments.appendChild(el);
-    });
+  sorted.forEach(a=>{
+    const el=document.createElement('div'); el.className='py-2';
+    el.innerHTML=`<div class="flex justify-between items-start">
+      <div><div class="text-sm font-semibold text-orange-300">${a.name||'Client'}</div>
+      <div class="text-xs text-gray-300">${prettyDate(a.date)} • ${a.time}</div>
+      <div class="text-gray-300 mt-1 text-sm">${a.description||''}</div></div></div>`;
+    compactAppointments.appendChild(el);
+  });
 }
 
 function renderExpandedAppointments(){
   if(!appointmentsBox) return;
   appointmentsBox.innerHTML='';
   if(!appointments.length){ appointmentsBox.innerHTML='<p class="text-gray-400">No appointments yet.</p>'; return; }
-  const grouped = appointments.reduce((acc,a)=>(acc[a.date]=acc[a.date]||[]).push(a), {});
+  const grouped = appointments.reduce((acc, ap)=>{ (acc[ap.date]=acc[ap.date]||[]).push(ap); return acc; },{});
   Object.keys(grouped).sort().forEach(date=>{
     const header=document.createElement('div'); header.className='py-3';
-    header.innerHTML=`<div class="text-sm font-bold text-orange-300 mb-2">${prettyDate(date)}</div>`;
-    appointmentsBox.appendChild(header);
+    header.innerHTML=`<div class="text-sm font-bold text-orange-300 mb-2">${prettyDate(date)}</div>`; appointmentsBox.appendChild(header);
     grouped[date].forEach(ap=>{
       const card=document.createElement('div'); card.className='p-3 rounded mb-2 bg-black/20';
       card.innerHTML=`<div class="flex justify-between">
-          <div>
-            <div class="text-sm font-semibold text-white">${ap.name||'Client'}</div>
-            <div class="text-xs text-gray-300">${ap.time}</div>
-            <div class="text-gray-300 mt-2">${ap.description||''}</div>
-          </div>
-          <div class="text-xs text-gray-400">${prettyDate(date)}</div>
-        </div>`;
+        <div><div class="text-sm font-semibold text-white">${ap.name||'Client'}</div>
+        <div class="text-xs text-gray-300">${ap.time}</div>
+        <div class="text-gray-300 mt-2">${ap.description||''}</div></div>
+        <div class="text-xs text-gray-400">${prettyDate(date)}</div>
+      </div>`;
       appointmentsBox.appendChild(card);
     });
   });
@@ -275,83 +257,48 @@ function updateTimeSlots(){
   const selectedDate = dateInput.value;
   timeSelect.innerHTML='<option value="">Select a time</option>';
   if(!selectedDate) return;
-  const booked=appointments.filter(a=>a.date===selectedDate).map(a=>a.time);
+  const booked = appointments.filter(a=>a.date===selectedDate).map(a=>a.time);
   DAILY_SLOTS.forEach(slot=>{
-    const opt=document.createElement('option');
-    opt.value=slot;
+    const opt=document.createElement('option'); opt.value=slot;
     if(booked.includes(slot)){ opt.textContent=`${slot} (BOOKED)`; opt.disabled=true; } 
     else{ opt.textContent=`${slot} (Available)`; }
     timeSelect.appendChild(opt);
   });
 }
 
-/* ================= SUBMIT ================= */
-bookingForm.addEventListener('submit', async ev=>{
+bookingForm.addEventListener('submit', async (ev)=>{
   ev.preventDefault();
-  formFeedback.textContent="";
-  const name = document.getElementById('name').value.trim();
-  const date = dateInput.value;
-  const time = timeSelect.value;
-  const description = document.getElementById('description').value.trim();
-
-  if(!name || !date || !time || !description){
-    formFeedback.textContent="Please fill out all fields.";
-    formFeedback.style.color="tomato"; return;
-  }
-
-  if(appointments.some(a=>a.date===date && a.time===time)){
-    formFeedback.textContent="Sorry — that slot was just booked. Please choose another.";
-    formFeedback.style.color="tomato"; updateTimeSlots(); return;
-  }
-
+  formFeedback.textContent='';
+  const name=document.getElementById('name').value.trim();
+  const date=document.getElementById('date').value;
+  const time=document.getElementById('time').value;
+  const description=document.getElementById('description').value.trim();
+  if(!name||!date||!time||!description){ formFeedback.textContent="Please fill out all fields."; formFeedback.style.color="tomato"; return; }
+  if(appointments.some(a=>a.date===date&&a.time===time)){ formFeedback.textContent="Sorry — that slot was just booked. Please choose another."; formFeedback.style.color="tomato"; updateTimeSlots(); return; }
   try{
-    const res=await fetch(SHEET_API,{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({name,date,time,description})
-    });
-    const json=await res.json();
-    if(json && json.status==="success"){
-      formFeedback.textContent="Appointment booked! Thank you.";
-      formFeedback.style.color="lightgreen";
-      bookingForm.reset();
-      setTimeout(()=>openThankModal(),300);
-      await fetchAppointments();
-    } else {
-      formFeedback.textContent="There was an error saving your appointment. Please try again.";
-      formFeedback.style.color="tomato";
-      console.error("POST result:",json);
-    }
-  } catch(err){
-    console.error("POST failed",err);
-    formFeedback.textContent="Network error — could not book appointment.";
-    formFeedback.style.color="tomato";
-  }
+    const res = await fetch(SHEET_API,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({name,date,time,description})});
+    const json = await res.json();
+    if(json && json.status==="success"){ formFeedback.textContent="Appointment booked! Thank you."; formFeedback.style.color="lightgreen"; bookingForm.reset(); setTimeout(()=>openThankModal(),300); await fetchAppointments(); } 
+    else{ formFeedback.textContent="There was an error saving your appointment. Please try again."; formFeedback.style.color="tomato"; console.error(json); }
+  }catch(err){ console.error(err); formFeedback.textContent="Network error — could not book appointment."; formFeedback.style.color="tomato"; }
 });
 
-/* ================= ADMIN / MODALS ================= */
 function promptAdminKey(){
   const key=prompt("Enter admin key to view detailed appointments (ask owner).");
-  if(key===ADMIN_KEY){
-    expandedAppointments.classList.remove('hidden');
-    expandedAppointments.scrollIntoView({behavior:'smooth', block:'start'});
-  } else if(key!==null){ alert("Invalid key."); }
+  if(key===ADMIN_KEY){ expandedAppointments.classList.remove('hidden'); expandedAppointments.scrollIntoView({behavior:'smooth',block:'start'}); }
+  else if(key!==null){ alert("Invalid key."); }
 }
+
 function closeExpanded(){ expandedAppointments.classList.add('hidden'); }
 function toggleAppointmentsBox(){ compactAppointments.parentElement.scrollIntoView({behavior:'smooth'}); }
 function openThankModal(){ thankModal.classList.remove('hidden'); }
 function closeThankModal(){ thankModal.classList.add('hidden'); }
 function scrollToBooking(){ document.getElementById('bookingCard').scrollIntoView({behavior:'smooth'}); }
 
-/* ================= INIT ================= */
-(async function init(){
-  dateInput.addEventListener('change', updateTimeSlots);
-  await fetchAppointments();
-})();
+(async function init(){ dateInput.addEventListener('change', updateTimeSlots); await fetchAppointments(); })();
 </script>
 </body>
 </html>
-
 
 
 
