--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li>✅ You only pay for parts if needed</li>
           <li>✅ Free Virus Removal</li>
           <li>✅ Free PC Repair</li>
-          <li>✅ Free boobs</li>
+          <li>✅ Free mommas</li>
         </ul>
       </div>
     </div>
@@ -175,7 +175,7 @@
 
 <!-- SCRIPT -->
 <script>
-const SHEET_API = "https://script.google.com/macros/s/AKfycbzrE9p77mP5XBQXw4bSImWS1XYc_rQhUDlVANgKBWyCFnBjaHW-U45ohrhKGXggrTAaqQ/exec";
+const SHEET_API = "https://script.google.com/macros/s/AKfycbzO9X_W-cuDl5mCl-LFtfhOlxVs52wM1YzqgsT2XImG6IP4vFILY7DZX-ceFS-1tFj5Ug/exec";
   
 const ADMIN_KEY = "42069";
 
@@ -301,6 +301,7 @@ function scrollToBooking(){ document.getElementById('bookingCard').scrollIntoVie
 </script>
 </body>
 </html>
+
 
 
 
