--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li>✅ You only pay for parts if needed</li>
           <li>✅ Free Virus Removal</li>
           <li>✅ Free PC Repair</li>
-          <li>✅ Free nachos</li>
+          <li>✅ Free beer</li>
         </ul>
       </div>
     </div>
