--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li>✅ You only pay for parts if needed</li>
           <li>✅ Free Virus Removal</li>
           <li>✅ Free PC Repair</li>
-          <li>✅ Free beer</li>
+          <li>✅ Free tatas</li>
         </ul>
       </div>
     </div>
@@ -175,7 +175,7 @@
 
 <!-- SCRIPT -->
 <script>
-const SHEET_API = "https://script.google.com/macros/s/AKfycbw63r1cSUaCRZwJyH3eB73rWVbuVmRUvqTBt5NL43C7bImed5792lh4vBULTPzK7QENrw/exec";
+const SHEET_API = "https://script.google.com/macros/s/AKfycbwz1iUFnyUersgFiuMGCUnCP0STeMsEzI34QHJbQZFARU4IIXRWs6Bqn-FCsCzPmjkPJA/exec";
   
 const ADMIN_KEY = "42069";
 
@@ -301,6 +301,7 @@ function scrollToBooking(){ document.getElementById('bookingCard').scrollIntoVie
 </script>
 </body>
 </html>
+
 
 
 
