--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li>✅ You only pay for parts if needed</li>
           <li>✅ Free Virus Removal</li>
           <li>✅ Free PC Repair</li>
-          <li>✅ Free burritos</li>
+          <li>✅ Free tacos</li>
         </ul>
       </div>
     </div>
@@ -342,6 +342,7 @@ function scrollToBooking(){ document.getElementById('bookingCard').scrollIntoVie
 </script>
 </body>
 </html>
+
 
 
 
